--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -97,9 +97,9 @@
 
   <footer class="col-sm-12">
     <p class="text-center footer-text">Seahorse by <a href="http://deepsense.io/" target="_blank"><span>deep</span>sense<span>.io</span></a> | 2016 |
-          <a target="_blank" href="https://twitter.com/deepsense_io/"><img src="/img/twitter.png" height="35px" </a>
-          <a target="_blank" href="https://github.com/deepsense-io/seahorse-workflow-executor"><img src="/img/octocat.png" height="25px"></a>
-          <a target="_blank" href="http://feedback.seahorse.deepsense.io/"><img src="/img/userecho.png" height="25px"></a>
+          <a target="_blank" href="https://twitter.com/deepsense_io/"><img src="{{base}}/img/twitter.png" height="35px" </a>
+          <a target="_blank" href="https://github.com/deepsense-io/seahorse-workflow-executor"><img src="{{base}}/img/octocat.png" height="25px"></a>
+          <a target="_blank" href="http://feedback.seahorse.deepsense.io/"><img src="{{base}}/img/userecho.png" height="25px"></a>
     </p>
   </footer>
 </body>
